// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Filter Snapshots matches snapshot for basic filter 1`] = `
<div
  class="zds-filter__container"
>
  <button
    class="zds-button zds-button__outlined zds-button__lg filter-button"
    id=":r2h:"
    tabindex="0"
    type="button"
  >
    <div
      class="zds-filter-button__content"
    >
      <span
        class="zds-filter-button__text"
      >
        Filtros
      </span>
      <span
        class="zds-filter-button__arrow "
      >
        <svg
          aria-hidden="true"
          class="zds-filter-button__icon ___12fm75w_1fmvgpr f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </button>
</div>
`;

exports[`Filter Snapshots matches snapshot for calendar filter 1`] = `
<div
  class="zds-filter__container"
>
  <button
    class="zds-button zds-button__outlined zds-button__lg filter-button"
    id=":r2i:"
    tabindex="0"
    type="button"
  >
    <div
      class="zds-filter-button__content"
    >
      <span
        class="zds-filter-button__text"
      >
        14/03/2024
      </span>
      <span
        class="zds-filter-button__arrow "
      >
        <svg
          aria-hidden="true"
          class="zds-filter-button__icon ___12fm75w_1fmvgpr f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </button>
</div>
`;

exports[`Filter Snapshots matches snapshot with selections 1`] = `
<div
  class="zds-filter__container"
>
  <button
    class="zds-button zds-button__outlined zds-button__lg filter-button"
    id=":r2j:"
    tabindex="0"
    type="button"
  >
    <div
      class="zds-filter-button__content"
    >
      <span
        class="zds-filter-button__text"
      >
        Opção 1
      </span>
      <div
        class="zds-badge-container__status"
      >
        <div
          class="zds-badge__status"
          data-testid="badge-status"
        >
          <span
            aria-hidden="false"
            class="zds-badge__status-value"
          >
            +2
          </span>
        </div>
      </div>
      <span
        class="zds-filter-button__arrow "
      >
        <svg
          aria-hidden="true"
          class="zds-filter-button__icon ___12fm75w_1fmvgpr f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M15.85 7.65c.2.2.2.5 0 .7l-5.46 5.49a.55.55 0 0 1-.78 0L4.15 8.35a.5.5 0 1 1 .7-.7L10 12.8l5.15-5.16c.2-.2.5-.2.7 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
    </div>
  </button>
</div>
`;
